add name logo image and row to display logo

--- a/about-me.html
+++ b/about-me.html
@@ -7,7 +7,7 @@
     <title>Minori Hashimoto</title>
 
     <!-- Link to CSS -->
-    <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
+    <link rel = "stylesheet" type = "text/css" href = "assets/css/portfolio.css">
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
@@ -15,6 +15,15 @@
     
 </head>
 <body>
+
+<section id = "intro-page">
+    <div class = "row" id = "row-nav">
+        <div class = "column" id = "column-nav">
+            <img src = "assets/images/MHlogoBlack.png" id = "MH-logo" alt = "MH logo" width = "60px" height = "30px">
+        </div>
+    </div>
+
+</section>
     
 </body>
 </html>
