--- a/about-me.html
+++ b/about-me.html
@@ -38,6 +38,18 @@
         </div>
     </div>
 
+    <div class = "row" id = "contact-row">
+        <div class = "column contact">
+            <img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8">
+        </div>
+        <div class = "column contact">
+            <img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8">
+        </div>
+        <div class = "column contact">
+            <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
+        </div>
+    </div>
+
 </section>
     
 </body>
