add javascript functionality to change cube width on mouseover

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     </div>
 
 </section>
+
+<!-- Link to javascript -->
+<script src="assets/javascript/portfolio.js"></script>  
     
 </body>
 </html>
