add row in html to display name on page load

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         </div>
     </div>
 
+    <div class = "row" id = "my-name-row">
+        <div class = "column" id = "myName-column">
+        
+        </div>
+    </div>
+
     <div class = "row" id = "cubes-row">
         <div class = "column cube" id = "cube-0" cube-value = "0">
             
