add content to about me page: pro pic image and short description

--- a/about-me.html
+++ b/about-me.html
@@ -16,9 +16,17 @@
 <body>
 
 <section id = "about-me">
+    <div class = "row">
+        <div class = "column">
+            <img src = "assets/images/propic.png" width = "400px">
+        </div>
+        <div class = "column">
+            Hi, my name is Minori. <br>
+            I'm an ex-consultant turned dev. <br><br>
 
-
-
+            Minesweeper addict, cafe enthusiast, and inquisitive learner. 
+        </div>
+    </div>
 </section>
     
 <!-- Link to javascript -->
