add styling for about me page

--- a/about-me.html
+++ b/about-me.html
@@ -17,14 +17,20 @@
 
 <section id = "about-me">
     <div class = "row">
-        <div class = "column">
-            <img src = "assets/images/propic.png" width = "400px">
+        <div class = "column" id = "propic-column">
+            <img src = "assets/images/propic.png" id = "propic" width = "300px">
         </div>
-        <div class = "column">
-            Hi, my name is Minori. <br>
-            I'm an ex-consultant turned dev. <br><br>
-
-            Minesweeper addict, cafe enthusiast, and inquisitive learner. 
+        <div class = "column" id = "description">
+            <div class = "row">
+                Hi, my name is Minori. <br>
+                I'm an ex-consultant turned dev. <br><br>
+    
+                Minesweeper addict, cafe enthusiast, and inquisitive learner. 
+            </div>
+            <div class = "row">
+                <button>How I got here</button>
+                <button>Where I come from</button>
+            </div>
         </div>
     </div>
 </section>
