add styling for about me buttons

--- a/about-me.html
+++ b/about-me.html
@@ -27,9 +27,9 @@
     
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
-            <div class = "row">
-                <button>How I got here</button>
-                <button>Where I come from</button>
+            <div class = "row" id = "button-row">
+                <button id = "how">How I got here</button>
+                <button id = "where">Where I come from</button>
             </div>
         </div>
     </div>
