edit styling and alignment in about me and portfolio page

--- a/about-me.html
+++ b/about-me.html
@@ -18,6 +18,7 @@
 <section id = "about-me">
     <div class = "row">
         <div class = "column" id = "propic-column">
+            <p id = "about-header"> &lt ABOUT ME &gt</p>
             <img src = "assets/images/propic.png" id = "propic" width = "300px">
         </div>
         <div class = "column" id = "description">
