--- a/work.html
+++ b/work.html
@@ -15,11 +15,26 @@
     
 </head>
 <body>
+<section id = "work">
 
+<div class = "row">
+    <div class = "column" id = "projects-column">
+        <p id = "project-header">&lt PROJECTS &gt</p>
+    </div>
 
+    <div class = "column" id = "description-work">
 
-
+    </div>
     
+</div>
+
+
+
+
+
+
+
+</section>
 <!-- Link to javascript -->
 <script src="assets/javascript/portfolio.js"></script>  
 </body>
