add row for project categories

--- a/work.html
+++ b/work.html
@@ -23,9 +23,22 @@
     </div>
 
     <div class = "column" id = "description-work">
+        <div class = "row" id = "work-categories">
+            <div class = "column">
+                &lt ALL &gt
+            </div>
+            <div class = "column">
+                &lt JAVASCRIPT &gt
+            </div>
+            <div class = "column">
+                &lt NODE &gt
+            </div>
+            <div class = "column">
+                &lt REACT &gt
+            </div>
+        </div>
 
     </div>
-    
 </div>
 
 
