add project site pictures on work html

--- a/work.html
+++ b/work.html
@@ -38,6 +38,26 @@
             </div>
         </div>
 
+        <div class = "row">
+            <div class = "column">
+
+            </div>
+            <div class = "column">
+                <img src = "assets/images/hangman.png" width = "250px">
+                <img src = "assets/images/sip.png" width = "250px">
+            </div>
+            <div class = "column">
+                <img src = "assets/images/expressflix.png" width = "250px">
+                <img src = "assets/images/trivia.png" width = "250px">
+            </div>
+            <div class = "column">
+                <img src = "assets/images/polytopia.png" width = "250px">
+            </div>
+            <div class = "column">
+                
+            </div>
+        </div>
+
     </div>
 </div>
 
