add second row to display project work

--- a/work.html
+++ b/work.html
@@ -38,20 +38,36 @@
             </div>
         </div>
 
-        <div class = "row">
+        <div class = "row" id = "projects-row1">
             <div class = "column">
 
             </div>
             <div class = "column">
-                <img src = "assets/images/hangman.png" width = "250px">
-                <img src = "assets/images/sip.png" width = "250px">
+                <img src = "assets/images/hangman.png" width = "300px" height = "175px">
             </div>
             <div class = "column">
-                <img src = "assets/images/expressflix.png" width = "250px">
-                <img src = "assets/images/trivia.png" width = "250px">
+                <img src = "assets/images/expressflix.png" width = "300px" height = "175px">
             </div>
             <div class = "column">
-                <img src = "assets/images/polytopia.png" width = "250px">
+                <img src = "assets/images/polytopia.png" width = "300px" height = "175px">
+            </div>
+            <div class = "column">
+                
+            </div>
+        </div>
+
+        <div class = "row" id = "projects-row2">
+            <div class = "column">
+
+            </div>
+            <div class = "column">
+                <img src = "assets/images/sip.png" width = "300px" height = "175px">
+            </div>
+            <div class = "column">
+                <img src = "assets/images/trivia.png" width = "300px" height = "175px">
+            </div>
+            <div class = "column">
+                <img src = "assets/images/underconstruction.png" width = "300px" height = "175px">
             </div>
             <div class = "column">
                 
