add content for description and links for hangman project

--- a/work.html
+++ b/work.html
@@ -39,37 +39,44 @@
         </div>
 
         <div class = "row" id = "projects-row1">
-            <div class = "column">
+            <div class = "column project">
 
             </div>
-            <div class = "column">
-                <img src = "assets/images/hangman.png" width = "300px" height = "175px">
+            <div class = "column project" id = "hangman-col">
+                <div id = "hangman-image" style = "position: relative;">
+                    <img src = "assets/images/hangman.png" id = "hangman" width = "300px" height = "175px">
+                    <div  class = "column" id = "hangman-links" style = "position: absolute; top: 10px;">
+                        <p>HANGMAN</p>
+                        <p>javascript+timers</p>
+                        <p>SEE SITE</p>
+                    </div>
+                </div>
             </div>
-            <div class = "column">
-                <img src = "assets/images/expressflix.png" width = "300px" height = "175px">
+            <div class = "column project" id = "expressflix-col">
+                <img src = "assets/images/expressflix.png" id = "expressflix" width = "300px" height = "175px">
             </div>
-            <div class = "column">
-                <img src = "assets/images/polytopia.png" width = "300px" height = "175px">
+            <div class = "column project" id = "polytopia-col">
+                <img src = "assets/images/polytopia.png" id = "polytopia" width = "300px" height = "175px">
             </div>
-            <div class = "column">
+            <div class = "column project">
                 
             </div>
         </div>
 
         <div class = "row" id = "projects-row2">
-            <div class = "column">
+            <div class = "column project">
 
             </div>
-            <div class = "column">
-                <img src = "assets/images/sip.png" width = "300px" height = "175px">
+            <div class = "column project" id = "sip-col">
+                <img src = "assets/images/sip.png" id = "sip" width = "300px" height = "175px">
             </div>
-            <div class = "column">
-                <img src = "assets/images/trivia.png" width = "300px" height = "175px">
+            <div class = "column project" id = "trivia-col">
+                <img src = "assets/images/trivia.png" id = "trivia" width = "300px" height = "175px">
             </div>
-            <div class = "column">
+            <div class = "column project">
                 <img src = "assets/images/underconstruction.png" width = "300px" height = "175px">
             </div>
-            <div class = "column">
+            <div class = "column project">
                 
             </div>
         </div>
