add content for description and links for all projects

--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
             <div class = "column project" id = "hangman-col">
                 <div id = "hangman-image" style = "position: relative;">
                     <img src = "assets/images/hangman.png" id = "hangman" width = "300px" height = "175px">
-                    <div  class = "column" id = "hangman-links" style = "position: absolute; top: 10px;">
+                    <div  class = "column project-subtitle" id = "hangman-links" style = "position: absolute; top: 10px;">
                         <p>HANGMAN</p>
                         <p>javascript+timers</p>
                         <p>SEE SITE</p>
@@ -53,10 +53,24 @@
                 </div>
             </div>
             <div class = "column project" id = "expressflix-col">
-                <img src = "assets/images/expressflix.png" id = "expressflix" width = "300px" height = "175px">
+                <div style = "position: relative;">
+                    <img src = "assets/images/expressflix.png" id = "expressflix" width = "300px" height = "175px">
+                    <div  class = "column project-subtitle" id = "expressflix-links" style = "position: absolute; top: 10px;">
+                        <p>EXPRESSFLIX</p>
+                        <p>javascript+timers</p>
+                        <p>SEE SITE</p>
+                    </div>
+                </div>
             </div>
             <div class = "column project" id = "polytopia-col">
-                <img src = "assets/images/polytopia.png" id = "polytopia" width = "300px" height = "175px">
+                <div style = "position: relative;">
+                    <img src = "assets/images/polytopia.png" id = "polytopia" width = "300px" height = "175px">
+                    <div  class = "column project-subtitle" id = "polytopia-links" style = "position: absolute; top: 10px;">
+                        <p>POLYTOPIA</p>
+                        <p>javascript+timers</p>
+                        <p>SEE SITE</p>
+                    </div>
+                </div>
             </div>
             <div class = "column project">
                 
@@ -68,13 +82,34 @@
 
             </div>
             <div class = "column project" id = "sip-col">
-                <img src = "assets/images/sip.png" id = "sip" width = "300px" height = "175px">
+                <div style = "position: relative;">
+                    <img src = "assets/images/sip.png" id = "sip" width = "300px" height = "175px">
+                    <div  class = "column project-subtitle" id = "sip-links" style = "position: absolute; top: 10px;">
+                        <p>SIP</p>
+                        <p>javascript+timers</p>
+                        <p>SEE SITE</p>
+                    </div>
+                </div>
             </div>
             <div class = "column project" id = "trivia-col">
-                <img src = "assets/images/trivia.png" id = "trivia" width = "300px" height = "175px">
+                <div style = "position: relative;">
+                    <img src = "assets/images/trivia.png" id = "trivia" width = "300px" height = "175px">
+                    <div  class = "column project-subtitle" id = "trivia-links" style = "position: absolute; top: 10px;">
+                        <p>TRIVIA</p>
+                        <p>javascript+timers</p>
+                        <p>SEE SITE</p>
+                    </div>
+                </div>
             </div>
             <div class = "column project">
-                <img src = "assets/images/underconstruction.png" width = "300px" height = "175px">
+                <div style = "position: relative;">
+                    <img src = "assets/images/underconstruction.png" width = "300px" height = "175px">
+                    <div  class = "column project-subtitle" id = "uc-links" style = "position: absolute; top: 10px;">
+                        <p>UNDER CONSTRUCTION</p>
+                        <p>TBD</p>
+                        <p>TBD</p>
+                    </div>
+                </div>
             </div>
             <div class = "column project">
                 
