add links to git deployment pages

--- a/work.html
+++ b/work.html
@@ -45,30 +45,30 @@
             <div class = "column project" id = "hangman-col">
                 <div id = "hangman-image" style = "position: relative;">
                     <img src = "assets/images/hangman.png" id = "hangman" width = "300px" height = "175px">
-                    <div  class = "column project-subtitle" id = "hangman-links" style = "position: absolute; top: 10px;">
+                    <div  class = "column project-subtitle" id = "hangman-links" style = "position: absolute; top: 5px;">
                         <p>HANGMAN</p>
                         <p>javascript+timers</p>
-                        <p>SEE SITE</p>
+                        <a href = "https://minori-fh.github.io/Word-Guess-Game/">SEE SITE</a>
                     </div>
                 </div>
             </div>
             <div class = "column project" id = "expressflix-col">
                 <div style = "position: relative;">
                     <img src = "assets/images/expressflix.png" id = "expressflix" width = "300px" height = "175px">
-                    <div  class = "column project-subtitle" id = "expressflix-links" style = "position: absolute; top: 10px;">
+                    <div  class = "column project-subtitle" id = "expressflix-links" style = "position: absolute; top: 5px;">
                         <p>EXPRESSFLIX</p>
                         <p>javascript+timers</p>
-                        <p>SEE SITE</p>
+                        <a href = "https://minori-fh.github.io/giftastic/">SEE SITE</a>
                     </div>
                 </div>
             </div>
             <div class = "column project" id = "polytopia-col">
                 <div style = "position: relative;">
                     <img src = "assets/images/polytopia.png" id = "polytopia" width = "300px" height = "175px">
-                    <div  class = "column project-subtitle" id = "polytopia-links" style = "position: absolute; top: 10px;">
+                    <div  class = "column project-subtitle" id = "polytopia-links" style = "position: absolute; top: 5px;">
                         <p>POLYTOPIA</p>
                         <p>javascript+timers</p>
-                        <p>SEE SITE</p>
+                        <a href = "https://minori-fh.github.io/unit-4-game/">SEE SITE</a>
                     </div>
                 </div>
             </div>
@@ -84,20 +84,20 @@
             <div class = "column project" id = "sip-col">
                 <div style = "position: relative;">
                     <img src = "assets/images/sip.png" id = "sip" width = "300px" height = "175px">
-                    <div  class = "column project-subtitle" id = "sip-links" style = "position: absolute; top: 10px;">
+                    <div  class = "column project-subtitle" id = "sip-links" style = "position: absolute; top: 5px;">
                         <p>SIP</p>
                         <p>javascript+timers</p>
-                        <p>SEE SITE</p>
+                        <a href = "https://minori-fh.github.io/Sip/">SEE SITE</a>
                     </div>
                 </div>
             </div>
             <div class = "column project" id = "trivia-col">
                 <div style = "position: relative;">
                     <img src = "assets/images/trivia.png" id = "trivia" width = "300px" height = "175px">
-                    <div  class = "column project-subtitle" id = "trivia-links" style = "position: absolute; top: 10px;">
+                    <div  class = "column project-subtitle" id = "trivia-links" style = "position: absolute; top: 5px;">
                         <p>TRIVIA</p>
                         <p>javascript+timers</p>
-                        <p>SEE SITE</p>
+                        <a href = "https://minori-fh.github.io/TriviaGame/">SEE SITE</a>
                     </div>
                 </div>
             </div>
