add hyperlinks to contact icons

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
     <div class = "row" id = "contact-row">
         <div class = "column contact">
-            <img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8">
+            <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
         </div>
         <div class = "column contact">
-            <img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8">
+            <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
         </div>
         <div class = "column contact">
             <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
