move javascript for work.html into another file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </section>
 
 <!-- Link to javascript -->
-<script src="assets/javascript/portfolio.js"></script>  
+<script src="assets/javascript/home.js"></script>  
     
 </body>
 </html>
