--- a/work.html
+++ b/work.html
@@ -122,6 +122,6 @@
 
 </section>
 <!-- Link to javascript -->
-<script src="assets/javascript/portfolio.js"></script>  
+<script src="assets/javascript/work.js"></script>  
 </body>
 </html>
