add contact icons for all pages

--- a/about-me.html
+++ b/about-me.html
@@ -18,8 +18,25 @@
 <section id = "about-me">
     <div class = "row">
         <div class = "column" id = "propic-column">
-            <p id = "about-header"> &lt ABOUT ME &gt</p>
-            <img src = "assets/images/propic.png" id = "propic" width = "300px">
+            <div class = "row" id = "about-header-row">
+                <p id = "about-header"> &lt ABOUT ME &gt</p>
+            </div>
+
+            <div class = "row" id = "propic-row">
+                <img src = "assets/images/propic.png" id = "propic" width = "300px">
+            </div>
+
+            <div class = "row" id = "contact-row-about">
+                <div class = "column contact">
+                    <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
+                </div>
+                <div class = "column contact">
+                    <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
+                </div>
+                <div class = "column contact">
+                    <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
+                </div>
+            </div>
         </div>
         <div class = "column" id = "description">
             <div class = "row">
