--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div class = "row" id = "contact-row">
+    <div class = "row" id = "contact-row-index">
         <div class = "column contact">
             <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
         </div>
