--- a/work.html
+++ b/work.html
@@ -19,7 +19,21 @@
 
 <div class = "row">
     <div class = "column" id = "projects-column">
-        <p id = "project-header">&lt PROJECTS &gt</p>
+        <div class = "row" id = "project-header-row">
+            <p id = "project-header">&lt PROJECTS &gt</p>
+        </div>
+
+        <div class = "row" id = "contact-row-work">
+            <div class = "column contact">
+                <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
+            </div>
+            <div class = "column contact">
+                <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
+            </div>
+            <div class = "column contact">
+                <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
+            </div>
+        </div>
     </div>
 
     <div class = "column" id = "description-work">
