add home button on about me page

--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,10 @@
             </div>
         </div>
         <div class = "column" id = "description">
-            <div class = "row">
+            <div class = "row go-home">
+                <a href = "index.html"><img src = "assets/images/home.png" id = "house" width = "50px"></a>
+            </div>
+            <div class = "row" id = "self-description">
                 Hi, my name is Minori. <br>
                 I'm an ex-consultant turned dev. <br><br>
     
