add home button on portfolio page

--- a/about-me.html
+++ b/about-me.html
@@ -40,7 +40,7 @@
         </div>
         <div class = "column" id = "description">
             <div class = "row go-home">
-                <a href = "index.html"><img src = "assets/images/home.png" id = "house" width = "50px"></a>
+                <a href = "index.html"><img src = "assets/images/home.png" class = "house" width = "50px"></a>
             </div>
             <div class = "row" id = "self-description">
                 Hi, my name is Minori. <br>
