--- a/work.html
+++ b/work.html
@@ -37,6 +37,9 @@
     </div>
 
     <div class = "column" id = "description-work">
+        <div class = "row go-home">
+            <a href = "index.html"><img src = "assets/images/home.png" class = "house" width = "50px"></a>
+        </div>
         <div class = "row" id = "work-categories">
             <div class = "column">
                 &lt ALL &gt
