animate height on mouseover of cubes

--- a/about-me.html
+++ b/about-me.html
@@ -39,9 +39,6 @@
             </div>
         </div>
         <div class = "column" id = "description">
-            <div class = "row go-home">
-                <a href = "index.html"><img src = "assets/images/home.png" class = "house" width = "50px"></a>
-            </div>
             <div class = "row" id = "self-description">
                 Hi, my name is Minori. <br>
                 I'm an ex-consultant turned dev. <br><br>
@@ -49,14 +46,18 @@
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
             <div class = "row" id = "button-row">
-                <button id = "how">How I got here</button>
-                <button id = "where">Where I come from</button>
+                <a href = "index.html"><img src = "assets/images/home.png" class = "house" width = "70px"></a>
+                <a href = "index.html"><img src = "assets/images/whereIcomefrom.png" width = "70px"></a>
             </div>
+            <!-- <div class = "row" id = "button-description">
+                <p id = "home-button1">Home</p>
+                <p id = "whereIcomefrom-button">Where I come from</p>
+            </div> -->
         </div>
     </div>
 </section>
     
 <!-- Link to javascript -->
-<script src="assets/javascript/portfolio.js"></script>
+<script src="assets/javascript/home.js"></script>
 </body>  
 </html>
