edit home button row on work page

--- a/about-me.html
+++ b/about-me.html
@@ -59,5 +59,6 @@
     
 <!-- Link to javascript -->
 <script src="assets/javascript/home.js"></script>
+<script src="assets/javascript/about-me.js"></script>
 </body>  
 </html>
