--- a/work.html
+++ b/work.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class = "column" id = "description-work">
-        <div class = "row go-home">
-            <a href = "index.html"><img src = "assets/images/home.png" class = "house" width = "50px"></a>
+        <div class = "row" id = "button-row2">
+            <a href = "index.html"><img src = "assets/images/home.png" id = "home2" class = "house" width = "50px"></a>
         </div>
         <div class = "row" id = "work-categories">
             <div class = "column">
@@ -64,7 +64,7 @@
                     <img src = "assets/images/hangman.png" id = "hangman" width = "300px" height = "175px">
                     <div  class = "column project-subtitle" id = "hangman-links" style = "position: absolute; top: 5px;">
                         <p>HANGMAN</p>
-                        <p>javascript+timers</p>
+                        <p>javascript</p>
                         <a href = "https://minori-fh.github.io/Word-Guess-Game/">SEE SITE</a>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                     <img src = "assets/images/expressflix.png" id = "expressflix" width = "300px" height = "175px">
                     <div  class = "column project-subtitle" id = "expressflix-links" style = "position: absolute; top: 5px;">
                         <p>EXPRESSFLIX</p>
-                        <p>javascript+timers</p>
+                        <p>javascript+AJAX</p>
                         <a href = "https://minori-fh.github.io/giftastic/">SEE SITE</a>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                     <img src = "assets/images/polytopia.png" id = "polytopia" width = "300px" height = "175px">
                     <div  class = "column project-subtitle" id = "polytopia-links" style = "position: absolute; top: 5px;">
                         <p>POLYTOPIA</p>
-                        <p>javascript+timers</p>
+                        <p>javascript</p>
                         <a href = "https://minori-fh.github.io/unit-4-game/">SEE SITE</a>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     <img src = "assets/images/sip.png" id = "sip" width = "300px" height = "175px">
                     <div  class = "column project-subtitle" id = "sip-links" style = "position: absolute; top: 5px;">
                         <p>SIP</p>
-                        <p>javascript+timers</p>
+                        <p>javascript+Firebase+AJAX</p>
                         <a href = "https://minori-fh.github.io/Sip/">SEE SITE</a>
                     </div>
                 </div>
