add boolean variable to ensure page has loaded before other animations kick in

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
-                <p id = "about-me-link">About Me</p>
+                <p id = "about-me-link"> &lt About Me &gt</p>
             </div>
             <div class = "column cube" id = "cube-2" cube-value = "2">
-                <p id = "work-link">Work</p>
+                <p id = "work-link">&lt Work &gt</p>
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
    
