add key frames and css class to rotate buttons on hover

--- a/about-me.html
+++ b/about-me.html
@@ -46,8 +46,8 @@
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
             <div class = "row" id = "button-row">
-                <a href = "index.html"><img src = "assets/images/home.png" class = "house" width = "70px"></a>
-                <a href = "index.html"><img src = "assets/images/whereIcomefrom.png" width = "70px"></a>
+                <a href = "index.html"><img src = "assets/images/home.png" id = "home1" class = "house" width = "70px"></a>
+                <a href = "index.html"><img src = "assets/images/whereIcomefrom.png" id = "whereIComeFrom" width = "70px"></a>
             </div>
             <!-- <div class = "row" id = "button-description">
                 <p id = "home-button1">Home</p>
