add animation for about me and work text on cube

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Oswald|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+
     
 </head>
 <body>
@@ -35,10 +36,10 @@
 
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
-                <p id = "about-me-link"> &lt About Me &gt</p>
+                <p id = "about-me-link"> ABOUT ME </p>
             </div>
             <div class = "column cube" id = "cube-2" cube-value = "2">
-                <p id = "work-link">&lt Work &gt</p>
+                <p id = "work-link"> WORK </p>
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
    
