edit font families

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oswald&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -36,10 +35,10 @@
 
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
-                <p id = "about-me-link"> ABOUT ME </p>
+                <p id = "about-me-link"><strong>ABOUT ME</strong></p>
             </div>
             <div class = "column cube" id = "cube-2" cube-value = "2">
-                <p id = "work-link"> WORK </p>
+                <p id = "work-link"><strong>WORK</strong></p>
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
    
