add scroll text on first and last cube

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class = "row" id = "cubes-row">
         <div class = "row" id = "cubez">
             <div class = "column cube" id = "cube-0" cube-value = "0">
-
+                <p id = "scroll-arrow1">scroll →</p>
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
                 <p id = "about-me-link"><strong>ABOUT ME</strong></p>
@@ -41,7 +41,7 @@
                 <p id = "work-link"><strong>WORK</strong></p>
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
-   
+                <p id = "scroll-arrow2">← scroll</p>
             </div>
         </div>
     </div>
