add gif images to backgr background of cubes

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
                 <p id = "about-me-link"><strong>ABOUT ME</strong></p>
+                <img id = "background-image1" src = "assets/images/smokey.gif">
             </div>
             <div class = "column cube" id = "cube-2" cube-value = "2">
                 <p id = "work-link"><strong>WORK</strong></p>
+                <img id = "background-image2" src = "assets/images/rainbow.gif">
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
                 <p id = "scroll-arrow2">← scroll</p>
