add new button png file and change buttons on html pages

--- a/about-me.html
+++ b/about-me.html
@@ -19,7 +19,7 @@
     <div class = "row">
         <div class = "column" id = "propic-column">
             <div class = "row" id = "about-header-row">
-                <p id = "about-header"> &lt ABOUT ME &gt</p>
+                <p id = "about-header"> &lt ABOUT ME /&gt</p>
             </div>
 
             <div class = "row" id = "propic-row">
@@ -34,20 +34,19 @@
                     <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
                 </div>
                 <div class = "column contact">
-                    <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
+                    <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
                 </div>
             </div>
         </div>
         <div class = "column" id = "description">
+            <div class = "row" id = "button-row">
+                <a href = "index.html"><img src = "assets/images/house.png" id = "home1" class = "house" width = "30px"></a>
+            </div>
             <div class = "row" id = "self-description">
                 Hi, my name is Minori. <br>
                 I'm an ex-consultant turned dev. <br><br>
     
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
-            </div>
-            <div class = "row" id = "button-row">
-                <a href = "index.html"><img src = "assets/images/home.png" id = "home1" class = "house" width = "70px"></a>
-                <a href = "index.html"><img src = "assets/images/whereIcomefrom.png" id = "whereIComeFrom" width = "70px"></a>
             </div>
             <!-- <div class = "row" id = "button-description">
                 <p id = "home-button1">Home</p>
