--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
         </div>
         <div class = "column contact">
-            <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
+            <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
         </div>
     </div>
 
