--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
 <div class = "row">
     <div class = "column" id = "projects-column">
         <div class = "row" id = "project-header-row">
-            <p id = "project-header">&lt PROJECTS &gt</p>
+            <p id = "project-header">&lt PROJECTS /&gt</p>
         </div>
 
         <div class = "row" id = "contact-row-work">
@@ -31,14 +31,14 @@
                 <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
             </div>
             <div class = "column contact">
-                <img src = "assets/images/mailIcon.png" id = "mail-icon" width = "40px" opacity = "0.8">
+                <img src = "assets/images/mailIcon.png" class = "mail-icon" width = "40px" opacity = "0.8">
             </div>
         </div>
     </div>
 
     <div class = "column" id = "description-work">
         <div class = "row" id = "button-row2">
-            <a href = "index.html"><img src = "assets/images/home.png" id = "home2" class = "house" width = "50px"></a>
+            <a href = "index.html"><img src = "assets/images/house.png" id = "home2" class = "house" width = "30px"></a>
         </div>
         <div class = "row" id = "work-categories">
             <div class = "column">
