add scroll down image on about me and projects page

--- a/about-me.html
+++ b/about-me.html
@@ -48,10 +48,9 @@
     
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
-            <!-- <div class = "row" id = "button-description">
-                <p id = "home-button1">Home</p>
-                <p id = "whereIcomefrom-button">Where I come from</p>
-            </div> -->
+            <div class = "row" id = "scroll-row1">
+                <img src = "assets/images/scrolldown.png" width = "50px">
+            </div>
         </div>
     </div>
 </section>
