--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
     <!-- Link to jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Oswald|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Oswald&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -42,16 +42,16 @@
         </div>
         <div class = "row" id = "work-categories">
             <div class = "column">
-                &lt ALL &gt
+                ALL
             </div>
             <div class = "column">
-                &lt JAVASCRIPT &gt
+                JAVASCRIPT
             </div>
             <div class = "column">
-                &lt NODE &gt
+                NODE
             </div>
             <div class = "column">
-                &lt REACT &gt
+                REACT
             </div>
         </div>
 
@@ -126,6 +126,9 @@
             <div class = "column project">
                 
             </div>
+        </div>
+        <div class = "row" id = "scroll-row2">
+            <img src = "assets/images/scrolldown.png" width = "50px">
         </div>
 
     </div>
