add event handler on click of scroll down image

--- a/about-me.html
+++ b/about-me.html
@@ -49,12 +49,20 @@
                 Minesweeper addict, cafe enthusiast, and inquisitive learner. 
             </div>
             <div class = "row" id = "scroll-row1">
-                <img src = "assets/images/scrolldown.png" width = "50px">
+                <img src = "assets/images/scrolldown.png" id = "scroll-down1" width = "50px">
             </div>
         </div>
     </div>
 </section>
     
+
+
+<section id = "about-me2">
+
+
+
+
+</section>
 <!-- Link to javascript -->
 <script src="assets/javascript/home.js"></script>
 <script src="assets/javascript/about-me.js"></script>
