--- a/work.html
+++ b/work.html
@@ -128,17 +128,14 @@
             </div>
         </div>
         <div class = "row" id = "scroll-row2">
-            <img src = "assets/images/scrolldown.png" width = "50px">
+            <img src = "assets/images/scrolldown.png" id = "scroll-down2" width = "50px">
         </div>
 
     </div>
 </div>
+</section>
 
-
-
-
-
-
+<section id = "work2">
 
 </section>
 <!-- Link to javascript -->
